added new models

--- a/Mathematics/Linear-Algebra/Matrix-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/Matrix-Applications.ipynb
@@ -57,6 +57,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.28861615 0.30792552 0.3193138  0.28478876]\n",
+      "[[0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0.]]\n",
+      "[[ 0.08329928  0.00222797 -0.01870291  0.01410407]\n",
+      " [ 0.00222797  0.09481812  0.00270666  0.00054332]\n",
+      " [-0.01870291  0.00270666  0.1019613   0.01546316]\n",
+      " [ 0.01410407  0.00054332  0.01546316  0.08110464]]\n",
+      "Correlation Matrix\n",
+      "[[ 1.          0.02506934 -0.20294151  0.17159354]\n",
+      " [ 0.02506934  1.          0.02752774  0.00619563]\n",
+      " [-0.20294151  0.02752774  1.          0.17004255]\n",
+      " [ 0.17159354  0.00619563  0.17004255  1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.random.rand(100,4)\n",
+    "\n",
+    "cov_matrix = np.cov(data, rowvar=False)\n",
+    "correlation_matrix = np.zeros_like(cov_matrix)\n",
+    "std_devs = np.sqrt(np.diag(cov_matrix))\n",
+    "\n",
+    "for i in range(len(std_devs)):\n",
+    "  for j in range(len(std_devs)):\n",
+    "    correlation_matrix[i,j] = cov_matrix[i,j] / (std_devs[i] * std_devs[j])\n",
+    "\n",
+    "print(\"Correlation Matrix\")\n",
+    "print(correlation_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
