added new models

--- a/Modeling/Tips.ipynb
+++ b/Modeling/Tips.ipynb
@@ -101,6 +101,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Fstat Vs Mutual-Info\n",
+    "\n",
+    "- Linear vs Non-linear Relationships: If the relationship between the features and the target variable is linear, f_classif might outperform mutual_info_classif because it specifically tests for linear relationships and can be more powerful and sensitive in detecting these. mutual_info_classif is more robust for datasets where the relationships might be non-linear, complex, or involve interactions between variables.\n",
+    "- Data Distribution: f_classif assumes normally distributed data. If this assumption holds, it might provide better performance. In contrast, mutual_info_classif does not assume any particular distribution, so it is better suited for data with unknown or mixed distributions.\n",
+    "- Computational Efficiency: f_classif is generally faster and less computationally intensive compared to mutual_info_classif, which involves estimation of entropy from data and can be computationally expensive especially for large datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
