added new models;

--- a/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
+++ b/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
@@ -37,6 +37,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0.89356665, 0.84460956, 0.92390723],\n",
+       "        [0.70601461, 0.73075582, 0.83477707],\n",
+       "        [0.07301655, 0.29729439, 0.60216714]]),\n",
+       " array([[0.89356665, 0.84460956, 0.92390723],\n",
+       "        [0.70601461, 0.73075582, 0.83477707],\n",
+       "        [0.07301655, 0.29729439, 0.60216714]]))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A= np.random.rand(3,3)\n",
+    "\n",
+    "A_inv = np.linalg.inv(A)\n",
+    "\n",
+    "A_inv_inv = np.linalg.inv(A_inv)\n",
+    "\n",
+    "A, A_inv_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -50,8 +83,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
