added new models

--- a/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
+++ b/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
@@ -69,11 +69,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 8-2.\n",
+    "\n",
+    "#### Implement the full algorithm described in “Inverting Any Square Full-Rank Matrix” and reproduce Figure 8-3. Of course, your matrices will look different from Figure 8-3 because of random numbers, although the grid and identity matrices will be the same."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##"
+   ]
   }
  ],
  "metadata": {
