added new notes

--- a/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
+++ b/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
@@ -168,11 +168,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 8-5.\n",
+    "\n",
+    "#### Illustrate in Python that the pseudoinverse (via np.linalg.pinv) equals the full inverse (via np.linalg.inv) for an invertible matrix. Next, illustrate that the pseudoinverse equals the left-inverse for a tall full column-rank matrix, and that it equals the right-inverse for a wide full row-rank matrix."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##"
+   ]
   }
  ],
  "metadata": {
