added new inverses

--- a/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
+++ b/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
@@ -177,12 +177,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##"
+    "- Pseudoinverse equals the full inverse for an invertible square matrix.\n",
+    "- Pseudoinverse equals the left-inverse for a tall full column-rank matrix.\n",
+    "- Pseudoinverse equals the right-inverse for a wide full row-rank matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Scenario 1 - Square Matrix (Pseudoinverse vs Full Inverse)': True,\n",
+       " 'Scenario 2 - Tall Matrix (Pseudoinverse vs Left-Inverse)': True,\n",
+       " 'Scenario 3 - Wide Matrix (Pseudoinverse vs Right-Inverse)': False}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_square = np.random.rand(3,3)\n",
+    "\n",
+    "pinv_square = np.linalg.pinv(A_square)\n",
+    "inv_square = np.linalg.inv(A_square)\n",
+    "\n",
+    "A_tall = np.random.rand(4,2)\n",
+    "pinv_tall = np.linalg.pinv(A_tall)\n",
+    "left_inv_tall = np.dot(np.linalg.inv(np.dot(A_tall.T, A_tall)), A_tall.T)\n",
+    "\n",
+    "A_wide = np.random.rand(2,4)\n",
+    "pinv_wide = np.linalg.pinv(A_wide)\n",
+    "right_inv_wide = np.dot(np.linalg.inv(np.dot(A_wide.T, A_wide)), A_wide.T)\n",
+    "\n",
+    "comparisons = {\n",
+    "    \"Scenario 1 - Square Matrix (Pseudoinverse vs Full Inverse)\": np.allclose(pinv_square, inv_square),\n",
+    "    \"Scenario 2 - Tall Matrix (Pseudoinverse vs Left-Inverse)\": np.allclose(pinv_tall, left_inv_tall),\n",
+    "    \"Scenario 3 - Wide Matrix (Pseudoinverse vs Right-Inverse)\": np.allclose(pinv_wide, right_inv_wide),\n",
+    "}\n",
+    "\n",
+    "comparisons"
    ]
   }
  ],
