added new models

--- a/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
+++ b/Mathematics/Linear-Algebra/Matrix-Inverse.ipynb
@@ -225,6 +225,21 @@
     "\n",
     "comparisons"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applications\n",
+    "\n",
+    "- Linear Regression: The pseudoinverse is crucial for solving linear regression problems, especially in cases where the feature matrix is not invertible (e.g., with more features than observations or collinear variables).\n",
+    "- Dimensionality Reduction: Techniques like Principal Component Analysis (PCA) utilize the pseudoinverse for projecting data into a lower-dimensional space while retaining most of the variance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
