--- a/Mathematics/Linear-Algebra/Row-Reduction.ipynb
+++ b/Mathematics/Linear-Algebra/Row-Reduction.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Orthogonal Matrices and QR Decomposition"
+    "##  Row Reduction and LU Decomposition"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "#### Thus, the inverse of an orthogonal matrix is its transpose. That’s crazy cool, because the matrix inverse is tedious and prone to numerical inaccuracies, whereas the matrix transpose is fast and accurate."
+    "##"
    ]
   }
  ],
