--- a/Mathematics/Linear-Algebra/Row-Reduction.ipynb
+++ b/Mathematics/Linear-Algebra/Row-Reduction.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Memorize this statement: The goal of row reduction is to transform a dense matrix into an upper-triangular matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
