added new models

--- a/Mathematics/Linear-Algebra/Row-Reduction.ipynb
+++ b/Mathematics/Linear-Algebra/Row-Reduction.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LU Decomposition\n",
+    "#### The “LU” in LU decomposition stands for “lower upper,” as in lower-triangular, upper-triangular. The idea is to decompose a matrix into the product of two triangular matrices:\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
