--- a/Mathematics/Linear-Algebra/Row-Reduction.ipynb
+++ b/Mathematics/Linear-Algebra/Row-Reduction.ipynb
@@ -24,12 +24,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L: \n",
+      "[[1.  0.  0. ]\n",
+      " [0.5 1.  0. ]\n",
+      " [1.  1.  1. ]]\n",
+      "U: \n",
+      "[[ 2.  2.  4.]\n",
+      " [ 0. -1.  1.]\n",
+      " [ 0.  0. -3.]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.linalg\n",
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([ [2,2,4], [1,0,3], [2,1,2] ])\n",
+    "_,L,U = scipy.linalg.lu(A)\n",
+    "\n",
+    "# print them out\n",
+    "print('L: '), print(L)\n",
+    "print('U: '), print(U)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -39,8 +79,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
