added new chapter

--- a/Mathematics/Linear-Algebra/Row-Reduction.ipynb
+++ b/Mathematics/Linear-Algebra/Row-Reduction.ipynb
@@ -74,11 +74,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix A:\n",
+      " [[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]\n",
+      " [ 2  4  6  8]]\n",
+      "Rank of A: 2\n",
+      "\n",
+      "Lower Triangular Matrix L:\n",
+      " [[1.         0.         0.         0.        ]\n",
+      " [0.22222222 1.         0.         0.        ]\n",
+      " [0.55555556 0.25       1.         0.        ]\n",
+      " [0.11111111 0.5        0.         1.        ]]\n",
+      "Rank of L: 4\n",
+      "\n",
+      "Upper Triangular Matrix U:\n",
+      " [[9.00000000e+00 1.00000000e+01 1.10000000e+01 1.20000000e+01]\n",
+      " [0.00000000e+00 1.77777778e+00 3.55555556e+00 5.33333333e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 1.60365548e-16 0.00000000e+00]\n",
+      " [0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00]]\n",
+      "Rank of U: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "## "
+    "from scipy.linalg import lu\n",
+    "\n",
+    "A = np.array([[1, 2, 3, 4],\n",
+    "              [5, 6, 7, 8],\n",
+    "              [9, 10, 11, 12],\n",
+    "              [2, 4, 6, 8]]) \n",
+    "\n",
+    "P, L, U = lu(A)\n",
+    "rank_A = np.linalg.matrix_rank(A)\n",
+    "rank_L = np.linalg.matrix_rank(L)\n",
+    "rank_U = np.linalg.matrix_rank(U)\n",
+    "\n",
+    "print(\"Matrix A:\\n\", A)\n",
+    "print(\"Rank of A:\", rank_A)\n",
+    "print(\"\\nLower Triangular Matrix L:\\n\", L)\n",
+    "print(\"Rank of L:\", rank_L)\n",
+    "print(\"\\nUpper Triangular Matrix U:\\n\", U)\n",
+    "print(\"Rank of U:\", rank_U)"
    ]
   }
  ],
