added new models

--- a/Mathematics/Linear-Algebra/Least-Squares.ipynb
+++ b/Mathematics/Linear-Algebra/Least-Squares.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## General Linear Models\n",
+    "\n",
+    "#### A statistical model is a set of equations that relates predictors (called independent variables) to observations (called the dependent variable). In the model of the stock market, the independent variable is time and the dependent variable is stock market price (e.g., quantified as the S&P 500 index)."
+   ]
   },
   {
    "cell_type": "code",
