--- a/Mathematics/Linear-Algebra/Least-Squares.ipynb
+++ b/Mathematics/Linear-Algebra/Least-Squares.ipynb
@@ -18,18 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1.]\n",
+      " Matrix x: [[1. 1.]\n",
       " [1. 2.]\n",
       " [1. 3.]\n",
       " [1. 4.]\n",
       " [1. 5.]]\n",
+      "Transpose of [[1. 1. 1. 1. 1.]\n",
+      " [1. 2. 3. 4. 5.]]\n",
       "X^T X matrix:\n",
       " [[ 5. 15.]\n",
       " [15. 55.]]\n",
@@ -53,7 +55,8 @@
     "\n",
     "X= np.vstack([np.ones(x.shape[0]), x]).T\n",
     "\n",
-    "print(X)\n",
+    "print(f\" Matrix x: {X}\")\n",
+    "print(f\"Transpose of {X.T}\")\n",
     "XTX = np.dot(X.T, X)\n",
     "print(\"X^T X matrix:\\n\", XTX)\n",
     "\n",
