--- a/Mathematics/Linear-Algebra/Least-Squares.ipynb
+++ b/Mathematics/Linear-Algebra/Least-Squares.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Matrix x:\n",
+      "Matrix x Vstack:\n",
       " [[1. 1.]\n",
       " [1. 2.]\n",
       " [1. 3.]\n",
@@ -57,7 +57,7 @@
     "\n",
     "X= np.vstack([np.ones(x.shape[0]), x]).T\n",
     "\n",
-    "print(f\" Matrix x:\\n {X}\")\n",
+    "print(f\"Matrix x Vstack:\\n {X}\")\n",
     "print(f\"Transpose of\\n {X.T}\")\n",
     "XTX = np.dot(X.T, X)\n",
     "print(\"X^T X matrix:\\n\", XTX)\n",
