added new notes

--- a/Mathematics/Linear-Algebra/ LS-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/ LS-Applications.ipynb
@@ -12,7 +12,10 @@
    "metadata": {},
    "source": [
     "## Multicollinearity\n",
-    "#### If you’ve taken a statistics course, you might have heard of the term multicollinearity. The Wikipedia definition is “one predictor variable in a multiple regression model can be linearly predicted from the others with a substantial degree of accuracy.”2"
+    "\n",
+    "#### If you’ve taken a statistics course, you might have heard of the term multicollinearity. The Wikipedia definition is “one predictor variable in a multiple regression model can be linearly predicted from the others with a substantial degree of accuracy.”\n",
+    "\n",
+    "#### This means that there are linear dependencies in the design matrix. In the parlance of linear algebra, multicollinearity is just a fancy term for linear dependence, which is the same thing as saying that the design matrix is reduced-rank or that it is singular."
    ]
   },
   {
