added new models

--- a/Mathematics/Linear-Algebra/ LS-Applications.ipynb
+++ b/Mathematics/Linear-Algebra/ LS-Applications.ipynb
@@ -19,10 +19,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### A polynomial regression is the same as a “regular” regression, but the columns in the design matrix are defined as the x-axis values raised to increasing powers. Polynomial regressions are used for curve fitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Grid search is a nonlinear method of model fitting. Linear least squares is the optimal approach when the model is linear."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
