--- a/Mathematics/Linear-Algebra/Eigendecomposition.ipynb
+++ b/Mathematics/Linear-Algebra/Eigendecomposition.ipynb
@@ -24,12 +24,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.37228132,  5.37228132])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "matrix = np.array([\n",
+    "             [1,2],\n",
+    "             [3,4]\n",
+    "             ])\n",
+    "\n",
+    "evals = np.linalg.eig(matrix)[0]\n",
+    "evals"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -39,8 +64,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.-1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
