added new notes

--- a/Mathematics/Linear-Algebra/Eigendecomposition.ipynb
+++ b/Mathematics/Linear-Algebra/Eigendecomposition.ipynb
@@ -51,6 +51,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.37228132  5.37228132]\n",
+      "[[-0.82456484 -0.41597356]\n",
+      " [ 0.56576746 -0.90937671]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evals,evecs = np.linalg.eig(matrix)\n",
+    "print(evals), print(evecs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Indeed, eigenvectors are important because of their direction, not because of their magnitude."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
