added new notes

--- a/Mathematics/Linear-Algebra/Eigendecomposition.ipynb
+++ b/Mathematics/Linear-Algebra/Eigendecomposition.ipynb
@@ -87,10 +87,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Eigenvalues and Eigenvectors\n",
+    "#### Eigenvalues and eigenvectors are fundamental concepts in linear algebra, particularly concerning square matrices. An eigenvector of a matrix 𝐴A is a nonzero vector v such that multiplication by A alters only the scale of v:\n",
+    "- Av = lambda(v)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
