added new notes

--- a/Mathematics/Linear-Algebra/SVD.ipynb
+++ b/Mathematics/Linear-Algebra/SVD.ipynb
@@ -8,6 +8,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The purpose of the SVD is to decompose a matrix into the product of three matrices, called the left singular vectors (U), the singular values (E), and the right singular vectors (V):\n",
+    "#### A = UEV^T"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
