--- a/Docker/commands.ipynb
+++ b/Docker/commands.ipynb
@@ -15,6 +15,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Run a ps command from inside of the container to list all running processes.\n",
+    "- ps -elf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
