added new models

--- a/Docker/commands.ipynb
+++ b/Docker/commands.ipynb
@@ -19,7 +19,19 @@
    "metadata": {},
    "source": [
     "#### Run a ps command from inside of the container to list all running processes.\n",
-    "- ps -elf"
+    "- ps -elf\n",
+    "\n",
+    "#### There are only two processes:\n",
+    "\n",
+    "- PID 1. This is the /bin/bash process that we told the container to run with the docker run command.\n",
+    "- PID 9. This is the ps -elf command/process that we ran to list the running processes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Press Ctrl-PQ to exit the container without terminating it. This will land your shell back at the terminal of your Docker host. You can verify this by looking at your shell prompt."
    ]
   },
   {
