added new models

--- a/Docker/commands.ipynb
+++ b/Docker/commands.ipynb
@@ -42,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stop the container and kill it using the docker stop and docker rm commands. Remember to substitute the names/IDs of your own containers."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
