added new notes

--- a/Docker/commands.ipynb
+++ b/Docker/commands.ipynb
@@ -75,6 +75,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## When Docker was first released, the Docker engine had two major components:\n",
+    "\n",
+    "- The Docker daemon (sometimes referred to as just “the daemon”)\n",
+    "- LXC\n",
+    "- The Docker daemon was a monolithic binary – it contained all the code for API, the runtime, image builds, and more.\n",
+    "- LXC provided the daemon with access to the fundamental building-blocks of containers that existed in the Linux kernel. Things like namespaces and control groups (cgroups)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
