added new notes

--- a/Docker/commands.ipynb
+++ b/Docker/commands.ipynb
@@ -78,12 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## When Docker was first released, the Docker engine had two major components:\n",
-    "\n",
-    "- The Docker daemon (sometimes referred to as just “the daemon”)\n",
-    "- LXC\n",
-    "- The Docker daemon was a monolithic binary – it contained all the code for API, the runtime, image builds, and more.\n",
-    "- LXC provided the daemon with access to the fundamental building-blocks of containers that existed in the Linux kernel. Things like namespaces and control groups (cgroups)."
+    "#### The Docker daemon component implements the Docker API and can do things such as image management, networks, and volumes. However, image management is currently being removed from the daemon and implemented in containerd.\n",
+    "#### The containerd component oversees container execution and image management tasks. It was originally written by Docker, Inc. but then contributed to the CNCF. It’s usually classified as a high-level runtime that acts as a container supervisor managing lifecycle operations. It is small and lightweight and is used by many other projects including Kubernetes.\n",
+    "#### containerd relies on a low-level runtime called runc to interface with the host kernel and build containers. runc is the reference implementation of the OCI runtime-spec and expects to start containers from OCI-compliant bundles. containerd talks to runc and ensures Docker images are presented to runc as OCI-compliant bundles.\n"
    ]
   },
   {
