added new models

--- a/Docker/images.ipynb
+++ b/Docker/images.ipynb
@@ -43,6 +43,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Docker provides the --filter flag to filter the list of images returned by docker images.\n",
+    "\n",
+    "#### A dangling image is an image that is no longer tagged and appears in listings as <none>:<none>. A common way they occur is when building a new image with a tag that already exists. When this happens, Docker will build the new image, notice that an existing image already has the same tag, remove the tag from the existing image and give it to the new image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### You can delete all dangling images on a system with the docker image prune command. If you add the -a flag, Docker will also remove all unused images (those not in use by any containers)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
