added new notes

--- a/Docker/images.ipynb
+++ b/Docker/images.ipynb
@@ -73,6 +73,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### A Docker image is a collection of loosely-connected read-only layers where each layer comprises one or more files. Figure 6.3 shows an image with 5 layers.\n",
+    "\n",
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/docker-layers.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Another way to see the layers of an image is to inspect the image with the docker inspect command."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
