added new notes

--- a/Docker/images.ipynb
+++ b/Docker/images.ipynb
@@ -103,7 +103,23 @@
     "\n",
     "#### The manifest list is exactly what it sounds like: a list of architectures supported by a particular image tag. Each supported architecture then has its own manifest that lists the layers used to build it.\n",
     "\n",
-    "#### manifest list points to a manifest containing image config and layer data."
+    "#### manifest list points to a manifest containing image config and layer data.\n",
+    "\n",
+    "#### The ‘docker manifest’ command lets you inspect the manifest list of any image on Docker Hub. The following example inspects the manifest list on Docker Hub for the golang image. You can see that Linux and Windows are supported on various CPU architectures. You can run the same command without the grep filter to see the full JSON manifest list.\n",
+    "\n",
+    "- docker manifest inspect golang | grep 'architecture\\|os'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### When you no longer need an image on your Docker host, you can delete it with the docker rmi command. rmi is short for remove image.\n",
+    "\n",
+    "#### Deleting an image will remove the image and all of its layers from your Docker host. This means it will no longer show up in docker images commands and all directories on the Docker host containing the layer data will be deleted. However, if an image layer is shared by another image, it won’t be deleted until all images that reference it have been deleted.\n",
+    "\n",
+    "#### Delete the images pulled in the previous steps with the docker rmi command. The following example deletes an image by its ID, this might be different on your system.\n",
+    "- docker rmi 44dd6f223004"
    ]
   },
   {
